@@ -36,6 +36,7 @@ TODO IMPL: recalc bg always on bg colour change
 TODO: document typical actions in rxvt.1.pod keysyms
 TODO: warn with a graphical message when env has been modified
 
+TODO: open question, what does the nested set_color calls in get_coplours actualyl do? we can fail, but we always allocyte a replacement color.
 	- NOTICE: this release updates terminfo.
 	- fix pixel droppings on overdraw when a secondary core font has the
           same height but different ascent.
@@ -86,6 +87,8 @@ TODO: warn with a graphical message when env has been modified
           only relevant for antique 8bpp frame buffers).
 	- do not specialcase 2 or 4 colour visuals, leading to
           simpler and actually more correct code.
+        - hopefully no longer leak colours on !truecolor visuals.
+        - use consistent method names (scr_recolour => scr_recolor).
 
 9.20 Sat Apr 26 16:22:27 CEST 2014
         - (libptytty) fix bug that prevented urxvtd from writing utmp
